@startuml Class_Diagram
class User {
  +String username
  +String password
  +String role
  +matchPassword()
}

class Resident {
  +String fullName
  +Date dob
  +String gender
  +String identityCard
  +String hometown
  +String job
  +ObjectId apartmentId
  +String roleInApartment
  +String phone
  +String residencyStatus
}

class Apartment {
  +String name
  +Number area
  +ObjectId ownerId
  +ObjectId[] members
  +String apartmentNumber
  +String building
}

class Fee {
  +String title
  +String description
  +String type
  +Number amount
  +String unit
  +Boolean isActive
}

class Transaction {
  +ObjectId apartmentId
  +ObjectId feeId
  +Number totalAmount
  +String payerName
  +ObjectId createdBy
  +Date date
  +Number usage
  +Number unitPrice
}

class RegistrationCode {
  +String code
  +String type
  +Number usageLimit
  +Number usageCount
  +Date expiresAt
  +ObjectId createdBy
  +isValid()
}

User "1" -- "*" RegistrationCode : creates
User "1" -- "*" Transaction : records
Apartment "1" -- "1" Resident : owner
Apartment "1" -- "*" Resident : members
Apartment "1" -- "*" Transaction : pays
Fee "1" -- "*" Transaction : has
Resident "1" -- "0..1" Apartment : lives in

@enduml
